--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="stylesheet" href="styles.291dee1dc58bf430b3b2.css"></head>
+  </head>
   <body>
     <app-root></app-root>
-  <script src="runtime.ceb5a157cfa7faae9f95.js" defer></script><script src="polyfills.337bf95917c9415ba92b.js" defer></script><script src="scripts.24de5cb0b852c7421788.js" defer></script><script src="main.ba28243795932d33281c.js" defer></script></body>
+  <script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="scripts.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 </html>
